// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Management - Main - Load And Export File Card has access should show export button 1`] = `
<pf-load-and-export-files-card
  canExportOrgData={[Function Boolean]}
  canImportOrgData="false"
  latestOrgDataLoad$={[Function Store]}
  latestOrgDataLoadModalOpen$={[Function Store]}
  notificationStore={[Function Store]}
  store={[Function Store]}
  unsubscribe$={[Function Subject]}
>
  <div
    class="card mb-3 shadow-sm"
  >
    <div
      class="card-body"
    >
      <div
        class="row pb-3"
      >
        <div
          class="col d-flex justify-content-between"
        >
          <h4
            class="card-title d-inline-block flex-grow-1"
          >
             Load and Export Files 
          </h4>
        </div>
      </div>
      
      <div>
        <div
          class="row px-3"
        >
          <div
            class="col-8"
          >
            <h4
              class="load-type-title"
            >
              Org Data
            </h4>
            
          </div>
          <div
            class="col-4 text-right"
          >
            <div
              class="d-flex justify-content-end"
            >
              
              <div
                class="p-2"
              >
                <a
                  class="btn btn-outline-primary px-3"
                  href="/odata/Company/GetOrganizationalData"
                >
                  Export
                </a>
              </div>
              
            </div>
          </div>
        </div>
      </div>
      
      
    </div>
    <pf-latest-org-data-load-modal />
  </div>
</pf-load-and-export-files-card>
`;

exports[`Data Management - Main - Load And Export File Card has access should show import button 1`] = `
<pf-load-and-export-files-card
  canImportOrgData={[Function Boolean]}
  latestOrgDataLoad$={[Function Store]}
  latestOrgDataLoadModalOpen$={[Function Store]}
  notificationStore={[Function Store]}
  store={[Function Store]}
  unsubscribe$={[Function Subject]}
>
  <div
    class="card mb-3 shadow-sm"
  >
    <div
      class="card-body"
    >
      <div
        class="row pb-3"
      >
        <div
          class="col d-flex justify-content-between"
        >
          <h4
            class="card-title d-inline-block flex-grow-1"
          >
             Load and Export Files 
          </h4>
        </div>
      </div>
      
      <div>
        <div
          class="row px-3"
        >
          <div
            class="col-8"
          >
            <h4
              class="load-type-title"
            >
              Org Data
            </h4>
            
          </div>
          <div
            class="col-4 text-right"
          >
            <div
              class="d-flex justify-content-end"
            >
              
              
              <div
                class="p-2 d-inline-block"
                ngbdropdown=""
                placement="bottom-right"
              >
                <button
                  class="btn btn-outline-primary px-3"
                  id="orgDataImportBtnGroup"
                  ngbdropdowntoggle=""
                >
                  <span
                    class="mr-1"
                  >
                    Import
                  </span>
                </button>
                <div
                  aria-labelledby="orgDataImportBtnGroup"
                  class="dropdown-menu text-right"
                  ngbdropdownmenu=""
                >
                  
                  <a
                    class="dropdown-item"
                    ngbdropdownitem=""
                  >
                    Import Once
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      
      
    </div>
    <pf-latest-org-data-load-modal />
  </div>
</pf-load-and-export-files-card>
`;

exports[`Data Management - Main - Load And Export File Card no access should not show anything 1`] = `
<pf-load-and-export-files-card
  canExportOrgData="false"
  canImportOrgData="false"
  latestOrgDataLoad$={[Function Store]}
  latestOrgDataLoadModalOpen$={[Function Store]}
  notificationStore={[Function Store]}
  store={[Function Store]}
  unsubscribe$={[Function Subject]}
>
  
</pf-load-and-export-files-card>
`;
